fix overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-color: rgb(245, 245, 245);
+  overflow-x: hidden;
 }
 
 button {
